--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "postcss": "^8.4.49",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "swiper": "^11.1.15"
   },
   "scripts": {
     "dev": "webpack serve --mode development --open",
